hard-gists/7671688/run.log
=== Docker Run Log for 7671688 ===
Started at: Mi 29. Okt 17:14:24 CET 2025

[2025-10-29 17:14:25] START: Running container for 7671688
[2025-10-29 17:14:25] SUCCESS: Container b51646749e19c3b1bcb1652d1d92859a0d5a787261062fc4b24f05b72a65a9c9 started for 7671688
=== Container logs for 7671688 ===
  File "/snippet.py", line 13
    print "Importing CopyEA"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7671688 ===
[2025-10-29 17:14:27] INFO: Container b51646749e19c3b1bcb1652d1d92859a0d5a787261062fc4b24f05b72a65a9c9 has stopped
